[project]
name = "conversation-states"
version = "0.1.1"
description = "Shared models for LangGraph state"
authors = [{name = "Victor Diukov"}]
dependencies = [
    "pydantic>=2.0",
    "langgraph",
    "langchain-core"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"